<resources>
    <string name="app_name">OCBC Banking</string>
    <string name="loading_tasks_error">Something went wrong at our end</string>
    <string name="project_avatar_imge">project avatar imge</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal.</string>
    <string name="retry">RETRY</string>
    <string name="restart">Restart</string>
    <string name="steps">Steps: </string>
    <string name="count">5</string>
    <string name="image">image</string>
    <string name="label_number">22</string>
    <string name="label_question">\?</string>
    <string name="dialog_game_complete">You win the game by %1$d steps</string>
    <string name="try_again">Try another round</string>
    <string name="congratulations">Congratulations!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="msg_incorrect_username">Invalid username, please provide min 5 and max 15 characters</string>
    <string name="msg_incorrect_password">Invalid password, please provide min 5 and max 15 numbers</string>
    <string name="msg_incorrect_confirm_password">Invalid password, please provide min 5 and max 15 numbers</string>
    <string name="msg_password_mismatch">Mismatch password</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="you_have">You have</string>
    <string name="account_no">Account No</string>
    <string name="account_holder">Account Holder</string>
    <string name="make_transfer">Make Transfer</string>
    <string name="transfer">Transfer</string>
    <string name="payee">Payee</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="clear_cache">Clear cache</string>
    <string name="error">Error</string>
    <string name="reset_data_error">Unable to clear data</string>
    <string name="viewpager">ViewPager</string>
    <string name="like_image">like image</string>
    <string name="sold_out">sold out</string>
    <string name="sell">sell</string>
    <string name="sell_button">sell button</string>
</resources>
