<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />

        <variable
            name="action"
            type="com.khalid.hamid.githubrepos.ui.transfer.TransferActionListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_transfer_root"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen30"
        android:paddingRight="@dimen/dimen30"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_transfer"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transfer"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_payees"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@drawable/bg_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_transfer"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/payee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Payee" />

            <Spinner
                android:id="@+id/payee_spinner"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_height="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_amount"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@drawable/bg_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_payees"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_transfer_amount"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Amount" />

            <EditText
                android:id="@+id/et_transfer_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:maxLength="15"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_transfer_amount"
                tools:ignore="LabelFor,TextFields"
                tools:text="100.00" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_description"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@drawable/bg_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_amount"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_transfer_des"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Description" />

            <EditText
                android:id="@+id/et_transfer_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:lines="4"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_transfer_des"
                tools:ignore="LabelFor,TextFields"
                tools:text="Alice" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_transfer_error"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_description"
            tools:text="confirm password is incorrect" />


        <Button
            android:backgroundTint="@android:color/background_dark"
            android:id="@+id/btn_transfer"
            android:onClick="@{() -> action.transfer()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_transfer"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/dimen30"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

