<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />

        <variable
            name="action"
            type="com.khalid.hamid.githubrepos.ui.login.LoginActionListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_login_root"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen30"
        android:paddingRight="@dimen/dimen30"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_register"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_username"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@drawable/bg_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Username" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:maxLength="15"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="LabelFor,TextFields"
                tools:text="Alice" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_usr_error"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_username"
            tools:visibility="visible"
            tools:text="Invalid username" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_pwd"
            android:layout_marginTop="@dimen/dimen40"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@drawable/bg_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_username"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_pwd"
                android:textColor="@android:color/black"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Password" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:maxLength="15"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pwd"
                tools:ignore="LabelFor,TextFields"
                tools:text="Alice" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_pwd_error"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dimen10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_pwd"
            tools:visibility="visible"
            tools:text="Invalid password" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorBlack"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:onClick="@{() -> action.login()}"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            tools:layout_editor_absoluteX="30dp" />

        <Button
            android:backgroundTint="@color/colorBlack"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:id="@+id/btn_register"
            android:onClick="@{() -> action.register()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen30"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>