<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="action"
            type="com.khalid.hamid.githubrepos.ui.balance.BalanceActionListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_balance_root"
        android:layout_width="match_parent"
        android:background="@color/background"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_balance_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dimen20"
                android:paddingTop="@dimen/dimen30"
                android:paddingRight="@dimen/dimen20">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dimen10"
                    android:shadowColor="@android:color/background_dark"
                    android:shadowRadius="20"
                    app:cardCornerRadius="@dimen/dimen20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/dimen15"
                        android:paddingVertical="@dimen/dimen10">

                        <TextView
                            android:id="@+id/tv_title_bal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen10"
                            android:text="@string/you_have"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cl_pwd"
                            tools:text="You have"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_bal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen10"
                            android:textColor="@android:color/black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cl_pwd"
                            tools:text="SGD 21,142.33"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_title_accountNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen10"
                            android:text="@string/account_no"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cl_pwd"
                            tools:text="Account No"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_accountNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen10"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cl_pwd"
                            tools:text="6554-630-9653"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_title_holder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen10"
                            android:text="@string/account_holder"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cl_pwd"
                            tools:text="Account Holder"
                            tools:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_holder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen10"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="visible"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cl_pwd"
                            tools:text="Andy"
                            tools:visibility="visible" />

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <Button

            android:layout_marginLeft="@dimen/dimen20"
            android:layout_marginRight="@dimen/dimen20"
            android:id="@+id/btn_register"
            android:onClick="@{() -> action.makeTransfer()}"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/colorBlack"
            android:text="@string/make_transfer"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/dimen30"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

